@@ -30,7 +30,7 @@ import java.lang.constant.Constable;
 import java.util.List;
 import java.util.Optional;
 import java.util.Set;
-import jdk.incubator.foreign.MemoryLayout;
+import java.lang.foreign.MemoryLayout;
 import org.openjdk.jextract.impl.DeclarationImpl;
 
 /**
