@@ -26,7 +26,7 @@
 
 package org.openjdk.jextract.clang;
 
-import jdk.incubator.foreign.MemoryAddress;
+import java.lang.foreign.MemoryAddress;
 import org.openjdk.jextract.clang.libclang.Index_h;
 
 public final class PrintingPolicy implements AutoCloseable {
