@@ -30,8 +30,8 @@ package org.openjdk.jextract.clang.libclang;
 import java.lang.invoke.MethodHandle;
 import java.lang.invoke.VarHandle;
 import java.nio.ByteOrder;
-import jdk.incubator.foreign.*;
-import static jdk.incubator.foreign.ValueLayout.*;
+import java.lang.foreign.*;
+import static java.lang.foreign.ValueLayout.*;
 public class CXToken {
 
     static final  GroupLayout $struct$LAYOUT = MemoryLayout.structLayout(
@@ -49,13 +49,13 @@ public class CXToken {
         return CXToken.ptr_data$VH;
     }
     public static MemoryAddress ptr_data$get(MemorySegment seg) {
-        return (jdk.incubator.foreign.MemoryAddress)CXToken.ptr_data$VH.get(seg);
+        return (java.lang.foreign.MemoryAddress)CXToken.ptr_data$VH.get(seg);
     }
     public static void ptr_data$set( MemorySegment seg, MemoryAddress x) {
         CXToken.ptr_data$VH.set(seg, x);
     }
     public static MemoryAddress ptr_data$get(MemorySegment seg, long index) {
-        return (jdk.incubator.foreign.MemoryAddress)CXToken.ptr_data$VH.get(seg.asSlice(index*sizeof()));
+        return (java.lang.foreign.MemoryAddress)CXToken.ptr_data$VH.get(seg.asSlice(index*sizeof()));
     }
     public static void ptr_data$set(MemorySegment seg, long index, MemoryAddress x) {
         CXToken.ptr_data$VH.set(seg.asSlice(index*sizeof()), x);
@@ -65,11 +65,7 @@ public class CXToken {
     public static MemorySegment allocateArray(int len, SegmentAllocator allocator) {
         return allocator.allocate(MemoryLayout.sequenceLayout(len, $LAYOUT()));
     }
-    public static MemorySegment allocate(ResourceScope scope) { return allocate(SegmentAllocator.nativeAllocator(scope)); }
-    public static MemorySegment allocateArray(int len, ResourceScope scope) {
-        return allocateArray(len, SegmentAllocator.nativeAllocator(scope));
-    }
-    public static MemorySegment ofAddress(MemoryAddress addr, ResourceScope scope) { return RuntimeHelper.asArray(addr, $LAYOUT(), 1, scope); }
+    public static MemorySegment ofAddress(MemoryAddress addr, MemorySession session) { return RuntimeHelper.asArray(addr, $LAYOUT(), 1, session); }
 }
 
 
