@@ -21,9 +21,9 @@
  * questions.
  */
 
-import jdk.incubator.foreign.MemoryAddress;
-import jdk.incubator.foreign.MemorySegment;
-import jdk.incubator.foreign.ResourceScope;
+import java.lang.foreign.MemoryAddress;
+import java.lang.foreign.MemorySegment;
+import java.lang.foreign.MemorySession;
 import org.testng.annotations.Test;
 
 import java.util.concurrent.atomic.AtomicInteger;
@@ -48,31 +48,31 @@ import test.jextract.funcpointers.*;
 public class TestFuncPointerInvokers {
     @Test
     public void testStructFieldTypedef() {
-        try (ResourceScope scope = ResourceScope.newConfinedScope()) {
+        try (MemorySession session = MemorySession.openConfined()) {
             AtomicInteger val = new AtomicInteger(-1);
-            MemorySegment bar = Bar.allocate(scope);
-            Bar.foo$set(bar, Foo.allocate((i) -> val.set(i), scope).address());
-            Bar.foo(bar, scope).apply(42);
+            MemorySegment bar = Bar.allocate(session);
+            Bar.foo$set(bar, Foo.allocate((i) -> val.set(i), session).address());
+            Bar.foo(bar, session).apply(42);
             assertEquals(val.get(), 42);
         }
     }
 
     @Test
     public void testStructFieldFITypedef() {
-        try (ResourceScope scope = ResourceScope.newConfinedScope()) {
+        try (MemorySession session = MemorySession.openConfined()) {
             AtomicInteger val = new AtomicInteger(-1);
-            MemorySegment bar = Bar.allocate(scope);
-            Bar.foo$set(bar, Foo.allocate((i) -> val.set(i), scope).address());
-            Foo.ofAddress(Bar.foo$get(bar), scope).apply(42);
+            MemorySegment bar = Bar.allocate(session);
+            Bar.foo$set(bar, Foo.allocate((i) -> val.set(i), session).address());
+            Foo.ofAddress(Bar.foo$get(bar), session).apply(42);
             assertEquals(val.get(), 42);
         }
     }
 
     @Test
     public void testGlobalTypedef() {
-        try (ResourceScope scope = ResourceScope.newConfinedScope()) {
+        try (MemorySession session = MemorySession.openConfined()) {
             AtomicInteger val = new AtomicInteger(-1);
-            f$set(Foo.allocate((i) -> val.set(i), scope).address());
+            f$set(Foo.allocate((i) -> val.set(i), session).address());
             f().apply(42);
             assertEquals(val.get(), 42);
         }
@@ -80,41 +80,41 @@ public class TestFuncPointerInvokers {
 
     @Test
     public void testGlobalFITypedef() {
-        try (ResourceScope scope = ResourceScope.newConfinedScope()) {
+        try (MemorySession session = MemorySession.openConfined()) {
             AtomicInteger val = new AtomicInteger(-1);
-            f$set(Foo.allocate((i) -> val.set(i), scope).address());
-            Foo.ofAddress(f$get(), scope).apply(42);
+            f$set(Foo.allocate((i) -> val.set(i), session).address());
+            Foo.ofAddress(f$get(), session).apply(42);
             assertEquals(val.get(), 42);
         }
     }
 
     @Test
     public void testStructFieldFunctionPointer() {
-        try (ResourceScope scope = ResourceScope.newConfinedScope()) {
+        try (MemorySession session = MemorySession.openConfined()) {
             AtomicInteger val = new AtomicInteger(-1);
-            MemorySegment baz = Baz.allocate(scope);
-            Baz.fp$set(baz, Baz.fp.allocate((i) -> val.set(i), scope).address());
-            Baz.fp(baz, scope).apply(42);
+            MemorySegment baz = Baz.allocate(session);
+            Baz.fp$set(baz, Baz.fp.allocate((i) -> val.set(i), session).address());
+            Baz.fp(baz, session).apply(42);
             assertEquals(val.get(), 42);
         }
     }
 
     @Test
     public void testStructFieldFIFunctionPointer() {
-        try (ResourceScope scope = ResourceScope.newConfinedScope()) {
+        try (MemorySession session = MemorySession.openConfined()) {
             AtomicInteger val = new AtomicInteger(-1);
-            MemorySegment baz = Baz.allocate(scope);
-            Baz.fp$set(baz, Baz.fp.allocate((i) -> val.set(i), scope).address());
-            Baz.fp.ofAddress(Baz.fp$get(baz), scope).apply(42);
+            MemorySegment baz = Baz.allocate(session);
+            Baz.fp$set(baz, Baz.fp.allocate((i) -> val.set(i), session).address());
+            Baz.fp.ofAddress(Baz.fp$get(baz), session).apply(42);
             assertEquals(val.get(), 42);
         }
     }
 
     @Test
     public void testGlobalFunctionPointer() {
-        try (ResourceScope scope = ResourceScope.newConfinedScope()) {
+        try (MemorySession session = MemorySession.openConfined()) {
             AtomicInteger val = new AtomicInteger(-1);
-            fp$set(fp.allocate((i) -> val.set(i), scope).address());
+            fp$set(fp.allocate((i) -> val.set(i), session).address());
             fp().apply(42);
             assertEquals(val.get(), 42);
         }
@@ -122,19 +122,19 @@ public class TestFuncPointerInvokers {
 
     @Test
     public void testGlobalFIFunctionPointer() {
-        try (ResourceScope scope = ResourceScope.newConfinedScope()) {
+        try (MemorySession session = MemorySession.openConfined()) {
             AtomicInteger val = new AtomicInteger(-1);
-            fp$set(fp.allocate((i) -> val.set(i), scope).address());
-            fp.ofAddress(fp$get(), scope).apply(42);
+            fp$set(fp.allocate((i) -> val.set(i), session).address());
+            fp.ofAddress(fp$get(), session).apply(42);
             assertEquals(val.get(), 42);
         }
     }
 
     @Test
     public void testGlobalFIFunctionPointerAddress() {
-        try (ResourceScope scope = ResourceScope.newConfinedScope()) {
-            fp_addr$set(fp_addr.allocate((addr) -> MemoryAddress.ofLong(addr.toRawLongValue() + 1), scope).address());
-            assertEquals(fp_addr.ofAddress(fp_addr$get(), scope).apply(MemoryAddress.ofLong(42)), MemoryAddress.ofLong(43));
+        try (MemorySession session = MemorySession.openConfined()) {
+            fp_addr$set(fp_addr.allocate((addr) -> MemoryAddress.ofLong(addr.toRawLongValue() + 1), session).address());
+            assertEquals(fp_addr.ofAddress(fp_addr$get(), session).apply(MemoryAddress.ofLong(42)), MemoryAddress.ofLong(43));
         }
     }
 }
